--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Web Studio</title>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -21,7 +22,7 @@
       <div class="container container-header">
         <nav class="my-page-menu">
           <a
-            href="https://yasinbesni.github.io/goit-markup-hw-04/"
+            href="https://yasinbesni.github.io/goit-markup-hw-05/"
             class="page-logo-title"
           >
             WEB
@@ -374,7 +375,7 @@
     </main>
     <footer class="page-footer">
       <div class="footer-container">
-        <section class="footer-logo">
+        <div class="footer-logo">
           <a
             href="https://yasinbesni.github.io/goit-markup-hw-04/"
             class="page-logo-title"
@@ -388,9 +389,9 @@
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
-        </section>
+        </div>
 
-        <section class="social-media">
+        <div class="social-media">
           <p class="socialmedia">Social Media</p>
           <div class="foot-social">
             <svg class="icon2" width="40" height="40">
@@ -406,7 +407,7 @@
               <use href="./images/icons.svg#link2"></use>
             </svg>
           </div>
-        </section>
+        </div>
         <div class="subscribe-modal">
           <form>
             <label for="e-mail" class="subscribe-label">Subscribe</label>
@@ -420,88 +421,17 @@
               />
 
               <button type="submit" class="subs-button">
-                Subscribe <svg width="24" height="20" class="icon-send">
+                Subscribe
+                <svg width="24" height="20" class="icon-send">
                   <use href="./images/icons.svg#icon-send"></use>
                 </svg>
               </button>
-
-              
-              </div>
-            </form>
-        </div> 
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
+
     
-    <div class="form-data">
-      <form
-        class="form-css"
-        action="./person"
-        method="post"
-        enctype="multipart/form-data"
-      > 
-      <div class="close-tag">
-        <svg width="24" height="24" class="close-svg">
-          <use href="./images/icons.svg#close"></use>
-        </svg>
-      </div>
-        <p class="form-head">Leave your contacts and we will call you back</p>
-        <div class="inputs-css">
-          <div class="inputs-position">
-            <label class="form-datas" for="name">Name </label>
-            <input class="input-focus" type="text" name="name" id="name" required />
-            <svg width="18" height="24" class="icons-form">
-              <use href="./images/icons.svg#icon-person"></use>
-            </svg>
-          </div>
-          <div class="inputs-position">
-            <label class="form-datas" for="phone">Phone</label>
-            <input
-            class="input-focus"
-              type="tel"
-              id="phone"
-              name="phone"
-              pattern="[+][0-9]{2} [0-90]{3} [0-9]{3} [0-9]{2} [0-9]{2}"
-            />
-            <svg width="18" height="24" class="icons-form">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
-          </div>
-          <div class="inputs-position">
-            <label class="form-datas" for="email">E-mail</label>
-            <input class="input-focus" type="email" id="email" name="email" placeholder="E-mail"/>
-            <svg width="18" height="24" class="icons-form">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
-          </div>
-
-          <label class="form-datas" for="comment">Comment</label>
-          <textarea
-            class="form-datas"
-            id="comment"
-            name="comment"
-            placeholder="Text input"
-          ></textarea>
-        </div>
-
-        <div class="checkbox-css">
-            <input
-                type="checkbox"
-                class="checkbox-input"
-                id="checkbox"
-                name="checkbox"              
-              />
-         <label class="checkbox-label" for="checkbox">
-            <svg width="10" height="8" class="checkbox-svg">
-              <use href="./images/icons.svg#icon-click">
-            </svg>
-            <span class="checkbox-text"
-              >I accept the terms and conditions of the</span
-            >
-            <a href="#" class="privacy">Privacy Policy</a>
-            <button type="button" class="send-button">Send</button>
-          </label>
-        </div>
-      </form>
-    </div>
   </body>
 </html>
